# multitrack

./: CMakeLists.txt  README.md  build_and_run.sh
cli/: main.cpp
core/: alpha_beta.hpp  intersector.hpp  kalman.hpp  linear_fit.hpp  motion_model.hpp  types.hpp
engine/: engine.hpp  router.hpp  worker.hpp
geom/: point.hpp  rectangle.hpp
input/: rect_v2025.txt  track_v2025.txt
io/: file_source.hpp
output/: console.txt  console_alpha_beta.txt  console_eachstep.txt  console_kalman.txt  console_single.txt
sinks/: console_sink.hpp
util/: parse.hpp  spsc_ring.hpp  stats.hpp
